Implement if and stricter define